--- a/WeslyanDataMOOC_Jupyter_notebook.ipynb
+++ b/WeslyanDataMOOC_Jupyter_notebook.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Wesleyan University MOOC: Data Management and Visualisation\n",
+    "# Childhood Obesity and Social Deprivation in England\n",
     "Beginning 11 June 2018\n",
     "\n",
     "DATA SOURCE FILES have been created using file W_data_wrangling04.py\n",
