--- a/WeslyanDataMOOC_Jupyter_notebook.ipynb
+++ b/WeslyanDataMOOC_Jupyter_notebook.ipynb
@@ -7214,6 +7214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "** This (below) will depend on the run, I didn't use a random seed but should have. See Jupyter notebook 'Adjunct to Course04 Week04' to see it done properly.** <br>\n",
+    "\n",
     "Cluster 0 is the least interesting, as all deprivation levels were close to the mean. \n",
     "\n",
     "Cluster 1 has high income (GDHI) but far below cluster 3. It has the lowest levels of deprivation, except for having high Barriers to Housing and Services. (This could be consistent with, e.g., suburban areas outside major cities.) \n",
