--- a/WeslyanDataMOOC_Jupyter_notebook.ipynb
+++ b/WeslyanDataMOOC_Jupyter_notebook.ipynb
@@ -4800,7 +4800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bagging versus random forest"
+    "## Bagging versus Random Forest"
    ]
   },
   {
