High-performing decision tree

--- a/Tanzania_plus01.ipynb
+++ b/Tanzania_plus01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tanzania - wrangling done"
+    "# Tanzania - (most) wrangling done"
    ]
   },
   {
@@ -242,6 +242,20 @@
     "df = df = pd.read_csv('/Users/RAhmed/data store/Wesleyan_Capstone/corrected_data04.csv')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get rid of NaNs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
