Details from Decision Tree

--- a/Tanzania_plus03A.ipynb
+++ b/Tanzania_plus03A.ipynb
@@ -2023,7 +2023,7 @@
     "    Returns\n",
     "    -------\n",
     "    matplotlib.figure.Figure\n",
-    "        The resulting confusion matrix figure\n",
+    "        The resulting confusion matrix figurehttp://localhost:8890/notebooks/Documents/GitHub/WesleyanDataMOOC/Tanzania_plus03A.ipynb#\n",
     "    \"\"\"\n",
     "    df_cm = pd.DataFrame(\n",
     "        confusion_matrix, index=class_names, columns=class_names, \n",
