Data saved in numeric format for decision tree

--- a/Tanzania_plus04.ipynb
+++ b/Tanzania_plus04.ipynb
@@ -3484,10 +3484,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to a file\n",
+    "# df.to_csv('/Users/RAhmed/data store/Wesleyan_Capstone/all_numeric201808292240.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# To Do: Random Forest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How could be improved: frequency encoding of variables."
+   ]
   }
  ],
  "metadata": {
