Cross-validation used to tune, and methods compared

--- a/Tanzania_plus05.ipynb
+++ b/Tanzania_plus05.ipynb
@@ -459,59 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Do cross-validation approach"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://chrisalbon.com/machine_learning/model_evaluation/cross-validaton/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.757979797979798"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# With k-fold cross validation. \n",
-    "from sklearn import metrics\n",
-    "from sklearn.model_selection import KFold, cross_val_score\n",
-    "\n",
-    "model = DecisionTreeClassifier(max_depth=None)\n",
-    "\n",
-    "# Create k-Fold cross-validation\n",
-    "kf = KFold(n_splits=10, shuffle=True, random_state=1)\n",
-    "\n",
-    "# Do k-fold cross-validation\n",
-    "cv_results = cross_val_score(model, # Pipeline\n",
-    "                             predictors, # Feature matrix\n",
-    "                             targets, # Target vector\n",
-    "                             cv=kf, # Cross-validation technique\n",
-    "                             scoring=\"accuracy\", # Loss function\n",
-    "                             n_jobs=-1) # Use all CPU scores\n",
-    "\n",
-    "# Calculate mean\n",
-    "cv_results.mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Do KNN approach"
+    "## Quick Aside - do KNN approach"
    ]
   },
   {
@@ -557,6 +505,142 @@
     "    ## Append to list.\n",
     "    knn_list.append({i: knn.score(X_test, y_test)})\n",
     "knn_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do a global cross-validation approach on Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://chrisalbon.com/machine_learning/model_evaluation/cross-validaton/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.757979797979798"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# With k-fold cross validation. \n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "\n",
+    "model = DecisionTreeClassifier(max_depth=None)\n",
+    "\n",
+    "# Create k-Fold cross-validation\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state=1)\n",
+    "\n",
+    "# Do k-fold cross-validation\n",
+    "cv_results = cross_val_score(model, # Classifier\n",
+    "                             predictors, # Feature matrix\n",
+    "                             targets, # Target vector\n",
+    "                             cv=kf, # Cross-validation technique\n",
+    "                             scoring=\"accuracy\", # Loss function\n",
+    "                             n_jobs=-1) # Use all CPU scores\n",
+    "\n",
+    "# Calculate mean\n",
+    "cv_results.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do a hold out cross-validation approach on Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two differences: \n",
+    "> i). do cross-validation on train set only (not against all), and predict against test set<br>\n",
+    "> ii). experiment within the decision tree with various parameters\n",
+    "\n",
+    "N.B. cross_validation does not give a fitted model. There is a cross_val_predict, but I think it doesn;t test against a seprate hold out set. (?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7652988215488217\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7651515151515151"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# With k-fold cross validation. \n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "\n",
+    "\n",
+    "# train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(predictors, targets, test_size=.2)\n",
+    "\n",
+    "# Difference for this \n",
+    "model = DecisionTreeClassifier(max_depth=20, criterion='gini', random_state=2, splitter='random')\n",
+    "\n",
+    "# Create k-Fold cross-validation\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state=1)\n",
+    "\n",
+    "# Do k-fold cross-validation\n",
+    "cv_results = cross_val_score(model, # Classifier\n",
+    "                             X_train, # Feature matrix\n",
+    "                             y_train, # Target vector\n",
+    "                             cv=kf, # Cross-validation technique\n",
+    "                             scoring=\"accuracy\", # Loss function\n",
+    "                             n_jobs=-1) # Use all CPU scores\n",
+    "\n",
+    "# Calculate mean against train set!\n",
+    "print(cv_results.mean())\n",
+    "\n",
+    "# So I have tweaked the 'model' (above) parameters to get the best model, \n",
+    "# and can now test against the hold out set. ((Tweaked) Model has to be fitted)\n",
+    "model.fit(X_train, y_train)\n",
+    "y_predict = model.predict(X_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_test, y_predict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "^ above cross validation tweaking has improved accuracy (against hold out) by some 1.5%, great!"
    ]
   },
   {
@@ -701,12 +785,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do random forest with cross-validation and hold out set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8127104377104377"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random forest with cross-validation and hold out set\n",
+    "model = RandomForestClassifier(n_estimators=50, criterion='entropy', max_depth=18, \n",
+    "                               bootstrap=True, oob_score=True, random_state=5)\n",
+    "\n",
+    "# Create k-Fold cross-validation\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state=1)\n",
+    "\n",
+    "# Do k-fold cross-validation\n",
+    "cv_results = cross_val_score(model, # Classifier\n",
+    "                             X_train, # Feature matrix\n",
+    "                             y_train, # Target vector\n",
+    "                             cv=kf, # Cross-validation technique\n",
+    "                             scoring=\"accuracy\", # Loss function\n",
+    "                             n_jobs=-1) # Use all CPU scores\n",
+    "\n",
+    "# Calculate mean against train set!\n",
+    "cv_results.mean()\n",
+    "\n",
+    "# Calculate mean against test set\n",
+    "model.fit(X_train, y_train)\n",
+    "y_predict = model.predict(X_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Method | Cross-validation | Hold-out set | Accuracy |\n",
+    "| ---- | ---- | ---- | ---- |\n",
+    "| KNN | no | no | 68.8% |\n",
+    "| Decision tree | no | yes | 75.5% |\n",
+    "| Decision tree | yes | no | 75.8% |\n",
+    "| Decision tree | yes | yes | 76.5% |\n",
+    "| Random forest | no | yes | 79.6% |\n",
+    "| Random forest | yes | yes | 81.2% |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How could be improved: frequency encoding of variables."
+    "# How could be improved: frequency encoding of variables; nearest neighbour for construction year?"
    ]
   }
  ],
