Correction to Results table

--- a/Tanzania_plus05.ipynb
+++ b/Tanzania_plus05.ipynb
@@ -848,7 +848,7 @@
    "source": [
     "| Method | Cross-validation | Hold-out set | Accuracy |\n",
     "| ---- | ---- | ---- | ---- |\n",
-    "| KNN | no | no | 68.8% |\n",
+    "| KNN | no | yes | 68.8% |\n",
     "| Decision tree | no | yes | 75.5% |\n",
     "| Decision tree | yes | no | 75.8% |\n",
     "| Decision tree | yes | yes | 76.5% |\n",
