Variable importance fro Random Forest calculated.

--- a/Tanzania_plus04.ipynb
+++ b/Tanzania_plus04.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "(59400, 23)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "3655"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "3334"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "3877"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "3056"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "# fix df['scheme_managemet'], is non-boolean\n",
+    "# fix df['scheme_management'], is non-boolean\n",
     "df['scheme_management'].fillna(value='unknown', inplace=True)\n",
     "print('unknown' in df.scheme_management.unique())\n",
     "print(df['scheme_management'].isnull().sum())\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,37 +353,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      data_type  null_count  unique_count\n",
-      "id                        {int}           0         59400\n",
-      "latitude                {float}           0         57517\n",
-      "longitude               {float}           0         57516\n",
-      "gps_height                {int}           0          2428\n",
-      "installer                 {str}           0          2145\n",
-      "population                {int}           0          1049\n",
-      "date_recorded             {str}           0           356\n",
-      "construction_year         {int}           0            55\n",
-      "region_code               {int}           0            27\n",
-      "scheme_management         {str}           0            13\n",
-      "extraction_type_group     {str}           0            13\n",
-      "basin                     {str}           0             9\n",
-      "water_quality             {str}           0             8\n",
-      "payment_type              {str}           0             7\n",
-      "source_type               {str}           0             7\n",
-      "waterpoint_type_group     {str}           0             6\n",
-      "management_group          {str}           0             5\n",
-      "quantity_group            {str}           0             5\n",
-      "season_recorded           {str}           0             4\n",
-      "public_meeting            {int}           0             3\n",
-      "permit                    {int}           0             3\n",
-      "source_class              {str}           0             3\n",
-      "status_group              {str}           0             3\n"
+      "                           data_type  null_count  unique_count\n",
+      "id                             {int}           0         59400\n",
+      "latitude                     {float}           0         57517\n",
+      "longitude                    {float}           0         57516\n",
+      "gps_height                     {int}           0          2428\n",
+      "installer                      {str}           0          2145\n",
+      "population                     {int}           0          1049\n",
+      "date_recorded                  {str}           0           356\n",
+      "construction_year              {int}           0            55\n",
+      "region_code                    {int}           0            27\n",
+      "scheme_management              {str}           0            13\n",
+      "extraction_type_group          {str}           0            13\n",
+      "basin                          {str}           0             9\n",
+      "water_quality                  {str}           0             8\n",
+      "payment_type                   {str}           0             7\n",
+      "source_type                    {str}           0             7\n",
+      "waterpoint_type_group          {str}           0             6\n",
+      "management_group               {str}           0             5\n",
+      "quantity_group                 {str}           0             5\n",
+      "season_recorded                {str}           0             4\n",
+      "permit                         {int}           0             3\n",
+      "source_class                   {str}           0             3\n",
+      "status_group                   {str}           0             3\n",
+      "public_meeting         {float, bool}        3334             3\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "2145"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,77 +434,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DWE                        17402\n",
-       "unknown                     3656\n",
-       "Government                  1825\n",
-       "RWE                         1206\n",
-       "Commu                       1060\n",
-       "DANIDA                      1050\n",
-       "KKKT                         898\n",
-       "Hesawa                       840\n",
-       "0                            777\n",
-       "TCRS                         707\n",
-       "Central government           622\n",
-       "CES                          610\n",
-       "Community                    553\n",
-       "DANID                        552\n",
-       "District Council             551\n",
-       "HESAWA                       539\n",
-       "LGA                          408\n",
-       "World vision                 408\n",
-       "WEDECO                       397\n",
-       "TASAF                        396\n",
-       "District council             392\n",
-       "Gover                        383\n",
-       "AMREF                        329\n",
-       "TWESA                        316\n",
-       "WU                           301\n",
-       "Dmdd                         287\n",
-       "ACRA                         278\n",
-       "World Vision                 270\n",
-       "SEMA                         249\n",
-       "DW                           246\n",
-       "                           ...  \n",
-       "Singida yetu                   1\n",
-       "Goldwill  foundation           1\n",
-       "Lion's club                    1\n",
-       "Pentecostal church             1\n",
-       "RC CHURCH BROTHER              1\n",
-       "Muhindi                        1\n",
-       "Taees                          1\n",
-       "Care  international            1\n",
-       "is                             1\n",
-       "Mwamvita Rajabu                1\n",
-       "Church Of Disciples            1\n",
-       "CRISTAN OUTRICH                1\n",
-       "GLOBAL RESOURCE CO             1\n",
-       "germany                        1\n",
-       "BOAZI                          1\n",
-       "CJEJ0                          1\n",
-       "USA EMBASSY                    1\n",
-       "Internal Drainage Basin        1\n",
-       "Laizer                         1\n",
-       "Rhobi Wamburs                  1\n",
-       "TLC/community                  1\n",
-       "Sent Tho                       1\n",
-       "Emmanuel Kiswagala             1\n",
-       "GETDSC00                       1\n",
-       "DSP                            1\n",
-       "Wizara  ya maji                1\n",
-       "JAPAN                          1\n",
-       "Filber                         1\n",
-       "Ardhi and PET Companies        1\n",
-       "Nchagwa                        1\n",
+       "DWE                               17402\n",
+       "unknown                            3656\n",
+       "Government                         1825\n",
+       "RWE                                1206\n",
+       "Commu                              1060\n",
+       "DANIDA                             1050\n",
+       "KKKT                                898\n",
+       "Hesawa                              840\n",
+       "0                                   777\n",
+       "TCRS                                707\n",
+       "Central government                  622\n",
+       "CES                                 610\n",
+       "Community                           553\n",
+       "DANID                               552\n",
+       "District Council                    551\n",
+       "HESAWA                              539\n",
+       "LGA                                 408\n",
+       "World vision                        408\n",
+       "WEDECO                              397\n",
+       "TASAF                               396\n",
+       "District council                    392\n",
+       "Gover                               383\n",
+       "AMREF                               329\n",
+       "TWESA                               316\n",
+       "WU                                  301\n",
+       "Dmdd                                287\n",
+       "ACRA                                278\n",
+       "World Vision                        270\n",
+       "SEMA                                249\n",
+       "DW                                  246\n",
+       "                                  ...  \n",
+       "Rashid Mahongwe                       1\n",
+       "Singida yetu                          1\n",
+       "Rotary Club of Chico and Moshi        1\n",
+       "DWE&                                  1\n",
+       "Gesine                                1\n",
+       "PRIV                                  1\n",
+       "ECO LODGE                             1\n",
+       "Marumbo Community                     1\n",
+       "Others                                1\n",
+       "KC                                    1\n",
+       "RC Msufi                              1\n",
+       "Village local contractor              1\n",
+       "WDE                                   1\n",
+       "Nyamingu subvillage                   1\n",
+       "Staford Higima                        1\n",
+       "WEEPERS                               1\n",
+       "Nyitamboka                            1\n",
+       "Swalehe Rajabu                        1\n",
+       "Matogoro                              1\n",
+       "SIPDO                                 1\n",
+       "Region Water Department               1\n",
+       "Amari                                 1\n",
+       "BRA                                   1\n",
+       "hesaw                                 1\n",
+       "Mzee Omari                            1\n",
+       "Great Lakes                           1\n",
+       "Taasi                                 1\n",
+       "Mayiro                                1\n",
+       "TLC/Samora                            1\n",
+       "Shule ya msingi                       1\n",
        "Name: installer, Length: 2145, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        " ('AQUA WEL', 1)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "1641"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,17 +878,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Still a very high level of categories, 2145 down to 1641. Later  want to look at combining one-offs (i.e. only installed one wapter pump).\n",
-    "\n",
-    "First look at this visually."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1019,7 @@
        " 18015: 1}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,12 +1038,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Still a very high level of categories, 2145 down to 1641. Later  want to look at combining one-offs (i.e. only installed one wapter pump).\n",
+    "\n",
+    "First look at this visually."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What I want is a list of key * value form frequency_count, above, to do a gini-type plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "[865, 314, 282, 256, 255, 168, 154, 152, 225, 190]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        " 59400]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
